[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset_formater"
version = "0.1.0"
description = "Una herramienta profesional para formateo de datasets"
dependencies = [
    "Pillow",
    "numpy",
    "matplotlib",
    "requests",
    "reportlab",
    "tqdm",
    "opencv-python",
    "torch",
    "torchvision",  
    "segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
]


[project.scripts]
# Esto crea un comando directo en la terminal
get_subset_dataset = "dataset_formater.scripts.get_subset_dataset:main"
preview_dataset = "dataset_formater.scripts.preview_dataset:main"
match_preview_folder = "dataset_formater.scripts.match_preview_folder:main"
get_dataset_report = "dataset_formater.scripts.get_dataset_report:main"
transform_dataset = "dataset_formater.scripts.transform_dataset:main"
remap_dataset_labels = "dataset_formater.scripts.remap_dataset_labels:main"
transform2segmentation = "dataset_formater.scripts.transform2segmentation:main"
download_sam = "dataset_formater.scripts.download_sam:main"
segmentation2detection = "dataset_formater.scripts.segmentation2detection:main"
