[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "visionDS_toolkit"
version = "0.1.0"
description = "A toolkit for inspecting, transforming, and standardizing computer vision datasets (YOLO / COCO / COCO-JSON) for training and analysis."
dependencies = [
    "Pillow",
    "numpy",
    "matplotlib",
    "requests",
    "reportlab",
    "tqdm",
    "opencv-python",
    "torch",
    "torchvision",  
    "segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
]


[project.scripts]
get_subset_dataset = "visionDS_toolkit.scripts.get_subset_dataset:main"
preview_dataset = "visionDS_toolkit.scripts.preview_dataset:main"
match_preview_folder = "visionDS_toolkit.scripts.match_preview_folder:main"
get_dataset_report = "visionDS_toolkit.scripts.get_dataset_report:main"
transform_dataset = "visionDS_toolkit.scripts.transform_dataset:main"
remap_dataset_labels = "visionDS_toolkit.scripts.remap_dataset_labels:main"
transform2segmentation = "visionDS_toolkit.scripts.transform2segmentation:main"
download_sam = "visionDS_toolkit.scripts.download_sam:main"
segmentation2detection = "visionDS_toolkit.scripts.segmentation2detection:main"
